--- a/web/app/themes/platformlondon/styles/post-details.css
+++ b/web/app/themes/platformlondon/styles/post-details.css
@@ -1,7 +1,6 @@
 /* Post Details Block (used in Query Loop Post Templates) */
 .post-details {
-    @apply flex uppercase text-sm;
-    margin-top: 10px;
+    @apply flex uppercase text-sm mt-auto;
 }
 
 .post-details>* {
